<resources>
    <string name="app_name">Samachaar</string>
    <string name="general">General</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="tech">Technology</string>
    <string name="sports">Sports</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="rationale_location">This app needs access to your location to know where you are.</string>
    <string name="rationale_camera">This app needs access to your camera in order to use the OCR feature.</string>
    <string name="rationale_write">This app needs write access to your memory in order to use the Audio feature.</string>
    <string name="rationale_read">This app needs read access to your memory in order to use the Audio feature.</string>
    <string name="articleArgument">article</string>
    <string name="failed">Failed</string>
    <string name="ArticleTitle">Article</string>
    <string name="queryArgument">query</string>
    <string name="shareIntentString">I am using The Tech Reads app. You use it too. Read this article with me</string>
    <string name="shareUsing">\"Share Using \"</string>
    <string name="articleSaved">Article Saved Successfully.</string>
    <string name="BreakingNewsTitle">Breaking News</string>
    <string name="countryCode">in</string>
    <string name="FavoritesTitle">Favourites</string>
    <string name="articleDeleted">Article Deleted Successfully</string>
    <string name="undo">Undo</string>
    <string name="syncStarted">Sync has started</string>
    <string name="syncFailed">Sync has failed</string>
    <string name="syncCompleted">Sync completed successfully</string>
    <string name="homeTitle">Home</string>
    <string name="android">android</string>
    <string name="settingsTitle">Settings</string>
    <string name="chennelId">TechReads</string>
    <string name="audioDir">/KotNews</string>
    <string name="userArgument">User</string>
    <string name="locationPermission">Your Location services seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="AudioPlayerTitle">Audio Player</string>
    <string name="favorites">Favorites</string>
    <string name="BiasTitle">Bias Analysis</string>
    <string name="AnalyeTitle">Analyze</string>
    <string name="thisArticleIs">This article is</string>
    <string name="notBiased">Not Biased - 98.33489%</string>
    <string name="setimentTitle">Sentiment Analysis</string>
    <string name="positive">Positive</string>
    <string name="neutral">Neutral</string>
    <string name="negative">Negative</string>
    <string name="communicationTitle">Communication Analysis</string>
    <string name="this_article_shows">This article shows</string>
    <string name="emotionalTitle">Emotional Analysis</string>
    <string name="this_article_represents">This article represents</string>
    <string name="total_cases">Total Cases</string>
    <string name="active_cases">Active Cases</string>
    <string name="total_recoveries">Total Recoveries</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="show_synced_articles">Show Synced Articles</string>
    <string name="importantEntities">Important Entities</string>
    <string name="keyPhrases">Key Phrases</string>
    <string name="errorOccured">Some error occured</string>
    <string name="retry">Retry</string>
    <string name="related_articles">Related Articles</string>
</resources>