<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardView"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:id="@+id/searchLayout"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:id="@+id/backButton"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:padding="10dp"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/AnalyeTitle"
                android:padding="6dp"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/BiasTitle"
                android:padding="6dp"
                android:layout_marginStart="10dp"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/biasText"
                android:layout_marginLeft="10dp" />

            <androidx.cardview.widget.CardView
                android:layout_height="100dp"
                android:layout_width="match_parent"
                android:padding="20dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                android:id="@+id/biasCardView"
                app:cardBackgroundColor="@android:color/holo_green_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/biasText"
                >


                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="top|center"
                        android:text="@string/thisArticleIs"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="20dp"
                        />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="top|center"
                        android:text="@string/notBiased"
                        android:id="@+id/biasAnalysis"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="20dp"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/setimentTitle"
                android:padding="6dp"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/biasCardView"
                android:id="@+id/sentimentText"
                />

            <HorizontalScrollView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sentimentText"
                android:id="@+id/sentimentScrollView"
                >

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    >

                    <androidx.cardview.widget.CardView
                        android:layout_height="100dp"
                        android:layout_width="wrap_content"
                        android:padding="20dp"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardBackgroundColor="@android:color/holo_green_light"
                        android:layout_margin="10dp"
                        >

                        <LinearLayout
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            >

                            <TextView
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:layout_gravity="top|center"
                                android:text="@string/positive"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/white"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:paddingBottom="20dp"
                                />

                            <TextView
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:layout_gravity="top|center"
                                android:id="@+id/positiveSentiment"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/white"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:paddingBottom="20dp"
                                />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_height="100dp"
                        android:layout_width="wrap_content"
                        android:padding="20dp"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardBackgroundColor="@android:color/holo_orange_light"
                        android:layout_margin="10dp"
                        >

                        <LinearLayout
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            >

                            <TextView
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:layout_gravity="top|center"
                                android:text="@string/neutral"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/white"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:paddingBottom="20dp"
                                />

                            <TextView
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:layout_gravity="top|center"
                                android:id="@+id/neutralSentiment"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/white"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:paddingBottom="20dp"
                                />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_height="100dp"
                        android:layout_width="wrap_content"
                        android:padding="20dp"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="10dp"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@android:color/holo_red_dark"
                        >


                        <LinearLayout
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            >

                            <TextView
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:layout_gravity="top|center"
                                android:text="@string/negative"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/white"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:paddingBottom="20dp"
                                />

                            <TextView
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:layout_gravity="top|center"
                                android:id="@+id/negativeSentiment"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/white"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:paddingBottom="20dp"
                                />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/communicationTitle"
                android:padding="6dp"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sentimentScrollView"
                android:id="@+id/communicationText"
                />

            <androidx.cardview.widget.CardView
                android:layout_height="100dp"
                android:layout_width="match_parent"
                android:padding="20dp"
                app:cardElevation="10dp"
                android:id="@+id/communicationAnalysisCardView"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/communicationText"
                >


                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="top|center"
                        android:text="@string/this_article_shows"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="20dp"
                        />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="top|center"
                        android:id="@+id/communicationAnalysis"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="20dp"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/emotionalTitle"
                android:padding="6dp"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/communicationAnalysisCardView"
                android:id="@+id/emotionText"
                />

            <androidx.cardview.widget.CardView
                android:layout_height="100dp"
                android:layout_width="match_parent"
                android:padding="20dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emotionText"
                >


                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="top|center"
                        android:text="@string/this_article_represents"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="20dp"
                        />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="top|center"
                        android:id="@+id/emotionalAnalysis"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="20dp"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>